Fundamental Refactoring of RaLib Codebase (#101)
* Remove transition guards

* Remove generics from DataValue

* Remove GuardExpression

* Simplify constraint solver utils

* Remove Relation

* Remove unused code and extract merge from SDTGuard

* Simplified SDTGuards

* Remove SymbolicDecisionTree interface

* Improve ClassAnalyzer tests

* Add bijection class and new SDT equivalence implementation

* Add org.checkerframework:checker-qual to pom.xml

* Remove PIVs

* Memorables as set

* Change SDT equiv implementation

* Fix error in RemappingIterator.advance()

* Change confusing parameter names of IntervalGuard

* Fix error in SDTGuard.IntervalGuard constructor

* Fix guard consistency check

* Fix toExpr for IntervalGuard

* Call dispose on context after solving

* Implement a cache of solver queries

* Fix small error with suffix optimization

* Comment out unused assignments and other cleanups

* Remove leftover mentions of PIVs and some commented out code

* Remove outdated SDTGuardUtil file

* Remove some warnings related to plugin versions

* Further cleanups and removal of some left-over prints

* Use constraints in cache and not strings

* Bump com.diffplug.spotless:spotless-maven-plugin from 2.44.3 to 2.44.4

* Bump com.google.guava:guava from 33.4.6-jre to 33.4.8-jre

* Rename jsolv to solver and cleanup tests

* Cleanups in src/test files

* Cleanups in files under src/main

* Regression test documentation

* Stop copying SDTs and guards as SDT and guards a constant

* Deprecate getRegisters of SDTs

* Remove duplicate code in MappedPrefix and Memorables

* Homogeneous names for tests

* Ensure test names are unique across files

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: Kostis Sagonas <kostis@it.uu.se>
Co-authored-by: Fredrik Tåquist <fredriktaquist@gmail.com>